--- a/index.HTML
+++ b/index.HTML
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cole's Corner - Promoting Cooper's Clippers</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to Cole's Corner</h1>
+        <p>Sharing my love for fresh cuts at Cooper's Clippers!</p>
+    </header>
 
+    <section>
+        <h2>Why I Love Cooper's Clippers</h2>
+        <p>Cooper's Clippers always gives me the freshest haircut in town. Their friendly barbers, cozy atmosphere, and top-notch service make every visit a treat.</p>
+    </section>
+
+    <section>
+        <h2>Visit Cooper's Clippers</h2>
+        <p>If you’re looking for a great haircut, check them out:</p>
+        <ul>
+            <li>Address: [Insert Address Here]</li>
+            <li>Phone: [Insert Phone Number Here]</li>
+            <li>Website: <a href="#">[Insert Website Here]</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>Created by Cole | Promoting local businesses with passion</p>
+    </footer>
+</body>
+</html>
