--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>If you’re looking for a great haircut, check them out:</p>
         <ul>
             <li>Address: [60 Hobart Lane, Cohasset 02025]</li>
-            <li>Phone: [13392058934]</li>
+            <li>Phone: [1-339-205-8934]</li>
             <li>Website: <a href="#">[https://cblendz.github.io/coopersclippers/]</a></li>
         </ul>
     </section>
