--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cole's Corner - Promoting Cooper's Clippers</title>
+    <title>Coopers Clippers Fanpage - Promoting Cooper's Clippers</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Cole's Corner</h1>
+        <h1>Welcome to Coopers Clippers Fanpage</h1>
         <p>Sharing my love for fresh cuts at Cooper's Clippers!</p>
     </header>
 
